# CATAI-Linux

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  PYPI_README.md  README.md  build.sh  catai.py  pyproject.toml  ruff.toml  setup-ollama.sh  sprite_viewer.html
.github/workflows/: lint.yml  publish.yml  test.yml
catai_linux/: __init__.py  __main__.py  activity.py  app.py  character_packs.py  chat_backend.py  config_schema.py  constants.py  drawing.py  easter_eggs.py  encounters.py  l10n.py  memory.py  metrics.py  monitors.py  mood.py  personality.py  reactions.py  seasonal.py  settings_window.py  shell.py  theme.py  tts.py  updater.py  voice.py  wake_word.py  x11_helpers.py
catai_linux/cat01/: metadata.json
catai_linux/cat02/: metadata.json
catai_linux/cat03/: metadata.json
catai_linux/cat04/: metadata.json
catai_linux/cat05/: metadata.json
catai_linux/cat_orange/: metadata.json
catai_linux/cute_orange_cat/: metadata.json
catai_linux/kitten01/: metadata.json
catai_linux/kitten02/: metadata.json
catai_linux/kitten03/: metadata.json
catai_linux/kitten04/: metadata.json
catai_linux/kitten05/: metadata.json
catai_linux/kitten_orange/: metadata.json
catai_linux/locales/en/LC_MESSAGES/: catai.mo  catai.po
catai_linux/locales/es/LC_MESSAGES/: catai.mo  catai.po
catai_linux/locales/fr/LC_MESSAGES/: catai.mo  catai.po
catai_linux/sounds/: NOTICE.md
scripts/: catai_sprites.ipynb  catset_to_catai.py  generate_sprites.py  kittens_to_catai.py  sd_postprocess.py
tests/: e2e_test.py  test_modules.py
tests/fixtures/: ci_config.json
tools/: render_demo_gif.py  render_love_demo.py  render_screenshots.py  sprite_preview.py
